# cmd/spec/openapi.yaml
@@ -15,7 +15,7 @@ components:
         Title:
           type: string
       type: object
-    v1.CreateThirdyPartyRepo:
+    v1.CreateThirdPartyRepo:
       properties:
         Account:
           type: string
@@ -2086,21 +2086,21 @@ paths:
                 $ref: '#/components/schemas/v1.InternalServerError'
           description: There was an internal server error.
       summary: Check if image name is in use for current account 
-  /thirdypartyrepo:
+  /thirdpartyrepo:
     post:
       operationId: CreateThirdPartyRepo
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/v1.CreateThirdyPartyRepo'
+              $ref: '#/components/schemas/v1.CreateThirdPartyRepo'
         required: true
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1.CreateThirdyPartyRepo'
+                $ref: '#/components/schemas/v1.CreateThirdPartyRepo'
           description: OK
         "400":
           content:
@@ -2116,7 +2116,7 @@ paths:
           description: There was an internal server error.
       summary: Create Third Party Repository for an account.
     get:
-      operationId: ListAllThirdyPartyRepo
+      operationId: GetAllThirdPartyRepo
       responses:
         "200":
           content:
@@ -2127,7 +2127,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/v1.CreateThirdyPartyRepo'
+                      $ref: '#/components/schemas/v1.CreateThirdPartyRepo'
           description: OK
         "400":
           content:
